feat: home page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ngoding Aja - Learn Coding Online</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
-    
+<body class="bg-gray-100">
+
+    <div id="ad-bar" class="bg-yellow-500 p-4 text-white text-center relative slide-up">
+        <div class="text-sm">
+            Future-ready courses start at <span class="font-bold">RP 16.000,00</span>
+        </div>
+        <div class="text-lg font-bold">
+            1 day left!
+        </div>
+        <button onclick="closeAd()" class="absolute top-0 right-0 m-2 text-white font-bold text-lg">✕</button>
+    </div>
+
+    <nav class="bg-whitetext-white px-2 py-4 shadow-lg">
+        <div class="container mx-auto flex justify-between items-center">
+            <div class="flex items-center space-x-6">
+                <a href="index.html" class="text-2xl font-bold">Ngoding Aja</a>
+                <a href="categories.html" class="hover:text-blue-600">Categories</a>
+            </div>
+
+            <div class="flex-grow mx-4">
+                <input type="text" placeholder="Search for anything" class="w-full p-2 border rounded-lg">
+            </div>
+
+            <div class="flex gap-3 items-center">
+                <a href="courses.html" class="hover:text-blue-600">Courses</a>
+                <a href="about.html" class="hover:text-blue-600">About</a>
+                <a href="cart.html" class="hover:text-blue-600">🛒</a>
+                <a href="login.html" class="border border-black text-black px-4 py-2 hover:bg-black hover:text-white">Login</a>
+                <a href="signup.html" class="bg-black text-white px-4 py-2 border border-black hover:bg-white hover:text-black">Sign up</a>
+                <a href="contact.html" class="ml-2 hover:text-blue-600">Contact Us</a>
+            </div>
+        </div>
+    </nav>
+
+    <section class="relative h-96 bg-cover bg-center" style="background-image: url('your-hero-image.jpg')">
+        <div class="absolute left-36 top-1/4 bg-white p-6 rounded-lg shadow-lg max-w-md">
+            <h2 class="text-3xl font-bold mb-4">Great savings for a bright future</h2>
+            <p>Courses designed to help you reach your goals start at just RP 16.000,00. Sale ends on October 24.</p>
+        </div>
+    </section>
+
+    <section class="bg-gray-100 text-center my-12">
+        <div class="bg-gray-100 p-12 px-8">
+            <h4 class="text-xl text-gray font-bold mb-4">Trusted by over 16,000 and millions of learners around the world</h4>
+            <div class="flex flex-row justify-center gap-24 mt-6">
+                <img src="assets/samsung.webp" alt="Samsung" class="h-14 grayscale">
+                <img src="assets/cisco.png" alt="Cisco" class="h-14 grayscale">
+                <img src="assets/p&g.png" alt="P&G" class="h-14 grayscale">
+                <img src="assets/vw.png" alt="Volkswagen" class="h-14 grayscale">
+                <img src="assets/sony.png" alt="Sony" class="h-14 grayscale">
+                <img src="assets/vimeo.png" alt="Vimeo" class="h-14 grayscale">
+            </div>
+        </div>
+    </section>
+
+    <section class="p-12 bg-white my-12">
+        <h2 class="ml-4 text-3xl font-bold text-left">A Broad Selection of Courses</h2>
+        <p class="ml-4 text-left mt-2 mb-8">Choose from over 250,000 online video courses with new additions published every month.</p>
+
+        <div class="ml-4 flex space-x-8 mb-4">
+            <button id="golang-tab" class="tab text-sm text-black" onclick="changeTab('Golang')">Golang</button>
+            <button id="webdev-tab" class="tab text-sm text-gray-500" onclick="changeTab('Web Development')">Web Development</button>
+            <button id="js-tab" class="tab text-sm text-gray-500" onclick="changeTab('JavaScript')">JavaScript</button>
+            <button id="datasci-tab" class="tab text-sm text-gray-500" onclick="changeTab('Data Science')">Data Science</button>
+            <button id="aws-tab" class="tab text-sm text-gray-500" onclick="changeTab('AWS')">Amazon AWS</button>
+        </div>
+
+        <div id="tab-content" class="border bg-white p-6 bg-gray-100 shadow-xs">
+            <h3 class="text-xl font-bold" id="tab-title">Expand your career opportunities with Golang</h3>
+            <p id="tab-description">Master backend development with Golang and become a full-stack developer. Golang is known for its speed and reliability.</p>
+            <button class="p-2 mt-4 border border-black hover:bg-slate-200" id="tab-button">Explore Golang</button>
+
+            <div class="flex overflow-x-auto mt-2" id="courses-container">
+
+            </div>
+        </div>
+    </section>
+
+    <section class="bg-gray-100 p-12 my-12">
+        <h2 class="ml-4 text-3xl font-bold text-left mb-8">How learners like you are achieving their goals</h2>
+
+        <div id="testimonials-container" class="flex overflow-x-auto space-x-6">
+        </div>
+    </section>
+
+    <section class="bg-white text-center py-48 p-16">
+        <h2 class="text-4xl font-bold mb-6">What are you waiting for?</h2>
+        <a href="courses.html" class="border border-black text-black text-lg font-bold px-6 py-3 rounded-lg hover:bg-black hover:text-white">
+            Start Ngoding Aja
+        </a>
+    </section>
+
+
+    <script src="scripts/index.js"></script>
+
+
+    <footer class="bg-black text-white py-4">
+        <div class="container mx-auto flex justify-between items-center">
+            <h4 class="text-xl font-bold">Ngoding Aja</h4>
+
+            <div class="flex items-center">
+                <span class="mr-2">&copy;</span>
+                <p>2024 Ngoding Aja Inc.</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
