--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center space-x-6">
                 <a href="index.html" class="text-2xl font-bold">Ngoding Aja</a>
-                <a href="categories.html" class="hover:text-blue-600">Categories</a>
+                <a href="pages/categories.html" class="hover:text-blue-600">Categories</a>
             </div>
 
             <div class="flex-grow mx-4">
@@ -100,7 +100,6 @@
     </section>
 
 
-    <script src="scripts/index.js"></script>
 
 
     <footer class="bg-black text-white py-4">
@@ -113,6 +112,9 @@
             </div>
         </div>
     </footer>
+
+    <script src="scripts/index.js"></script>
+
 
 </body>
 </html>
