feat: courses page

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="flex gap-3 items-center">
-                <a href="courses.html" class="hover:text-blue-600">Courses</a>
+                <a href="../pages/courses.html" class="hover:text-blue-600">Courses</a>
                 <a href="about.html" class="hover:text-blue-600">About</a>
                 <a href="cart.html" class="hover:text-blue-600">🛒</a>
                 <a href="login.html" class="border border-black text-black px-4 py-2 hover:bg-black hover:text-white">Login</a>
