--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="flex gap-3 items-center">
-                <a href="courses.html" class="hover:text-blue-600">Courses</a>
+                <a href="pages/courses.html" class="hover:text-blue-600">Courses</a>
                 <a href="about.html" class="hover:text-blue-600">About</a>
                 <a href="cart.html" class="hover:text-blue-600">🛒</a>
                 <a href="login.html" class="border border-black text-black px-4 py-2 hover:bg-black hover:text-white">Login</a>
@@ -94,7 +94,7 @@
 
     <section class="bg-white text-center py-48 p-16">
         <h2 class="text-4xl font-bold mb-6">What are you waiting for?</h2>
-        <a href="courses.html" class="border border-black text-black text-lg font-bold px-6 py-3 rounded-lg hover:bg-black hover:text-white">
+        <a href="pages/courses.html" class="border border-black text-black text-lg font-bold px-6 py-3 rounded-lg hover:bg-black hover:text-white">
             Start Ngoding Aja
         </a>
     </section>
