feat: cart page

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
             <div class="flex gap-3 items-center">
                 <a href="pages/courses.html" class="hover:text-blue-600">Courses</a>
-                <a href="about.html" class="hover:text-blue-600">About</a>
-                <a href="cart.html" class="hover:text-blue-600">🛒</a>
-                <a href="login.html" class="border border-black text-black px-4 py-2 hover:bg-black hover:text-white">Login</a>
-                <a href="signup.html" class="bg-black text-white px-4 py-2 border border-black hover:bg-white hover:text-black">Sign up</a>
-                <a href="contact.html" class="ml-2 hover:text-blue-600">Contact Us</a>
+                <a href="pages/about.html" class="hover:text-blue-600">About</a>
+                <a href="pages/cart.html" class="hover:text-blue-600">🛒</a>
+                <a href="pages/login.html" class="border border-black text-black px-4 py-2 hover:bg-black hover:text-white">Login</a>
+                <a href="pages/signup.html" class="bg-black text-white px-4 py-2 border border-black hover:bg-white hover:text-black">Sign up</a>
+                <a href="pages/contact.html" class="ml-2 hover:text-blue-600">Contact Us</a>
             </div>
         </div>
     </nav>
