fix: adjust layout

--- a/pages/about.html
+++ b/pages/about.html
@@ -31,10 +31,10 @@
         </div>
     </nav>
 
-    <!-- Main Content -->
-    <main class="container mx-auto py-16 px-6">
+    
+    <main class="container mx-auto py-16 px-6 text-center">
         <h1 class="text-5xl font-bold text-center">About Ngoding Aja</h1>
-        <p class="text-lg text-gray-600 mt-6 text-center">At Ngoding Aja, we empower aspiring developers by providing top-quality coding courses that are accessible to everyone.</p>
+        <p class="text-lg text-gray-600 mt-6">At Ngoding Aja, we empower aspiring developers by providing top-quality coding courses that are accessible to everyone.</p>
 
         <section class="mt-16">
             <h2 class="text-3xl font-bold">Our Mission</h2>
@@ -43,12 +43,7 @@
 
         <section class="mt-12">
             <h2 class="text-3xl font-bold">What We Offer</h2>
-            <ul class="mt-4 text-gray-700 text-lg list-disc pl-5">
-                <li>Expert-led courses in various coding domains</li>
-                <li>A vibrant community of learners and mentors</li>
-                <li>Flexible, self-paced learning with real-world projects</li>
-                <li>Access to resources and interactive projects</li>
-            </ul>
+            <p class="mt-4 text-gray-700 text-lg">We offer expert-led courses in various coding domains, a vibrant community of learners and mentors, flexible self-paced learning with real-world projects, and access to comprehensive resources and interactive content to enhance your learning experience.</p>
         </section>
 
         <section class="mt-12">
@@ -57,7 +52,7 @@
         </section>
     </main>
 
-    <!-- Footer -->
+    
     <footer class="bg-black text-white py-6">
         <div class="container mx-auto flex justify-between items-center">
             <h4 class="text-xl font-bold">Ngoding Aja</h4>
