--- a/pages/login.html
+++ b/pages/login.html
@@ -33,7 +33,7 @@
 
     <main class="container mx-auto py-16 px-6">
         <h1 class="text-4xl font-bold text-center">Login</h1>
-        <form action="login.php" method="POST" class="mt-8 max-w-md mx-auto">
+        <form action="../login.php" method="POST" class="mt-8 max-w-md mx-auto">
             <div class="mb-4">
                 <label for="email" class="block text-lg font-medium">Email</label>
                 <input type="email" id="email" name="email" class="w-full p-2 border rounded-lg" required>
