--- a/pages/signup.html
+++ b/pages/signup.html
@@ -33,7 +33,7 @@
 
     <main class="container mx-auto py-16 px-6">
         <h1 class="text-4xl font-bold text-center">Sign Up</h1>
-        <form action="signup.php" method="POST" class="mt-8 max-w-md mx-auto">
+        <form action="../signup.php" method="POST" class="mt-8 max-w-md mx-auto">
             <div class="mb-4">
                 <label for="username" class="block text-lg font-medium">Username</label>
                 <input type="text" id="username" name="username" class="w-full p-2 border rounded-lg" required>
