--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
     </nav>
 
-    <section class="relative h-96 bg-cover bg-center" style="background-image: url('your-hero-image.jpg')">
-        <div class="absolute left-36 top-1/4 bg-white p-6 rounded-lg shadow-lg max-w-md">
+    <section class="relative h-[570px] bg-cover bg-center" style="background-image: url('assets/home.png')">
+        <div class="absolute left-72 top-56 bg-white p-6 rounded-lg shadow-lg max-w-md">
             <h2 class="text-3xl font-bold mb-4">Great savings for a bright future</h2>
             <p>Courses designed to help you reach your goals start at just RP 16.000,00. Sale ends on October 26.</p>
         </div>
