refactor: enhance ui

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -52,7 +52,7 @@
 
              <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="web-development-icon.png" alt="Web Development Icon" class="h-20">
+                    <img src="../assets/web-design.png" alt="Web Development Icon" class="h-full">
                 </div>
                 <h5 class="font-bold text-lg mt-2">Web Development</h5>
             </div>
@@ -60,7 +60,7 @@
 
             <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="data-science-icon.png" alt="Data Science Icon" class="h-20">
+                    <img src="../assets/data-science-cat.png" alt="Data Science Icon" class="h-full">
                 </div>
                 <h5 class="font-bold text-lg mt-2">Data Science</h5>
             </div>
@@ -68,7 +68,7 @@
 
             <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="mobile-development-icon.png" alt="Mobile Development Icon" class="h-20">
+                    <img src="../assets/mobile-dev-cat.png" alt="Mobile Development Icon" class="h-full">
                 </div>
                 <h5 class="font-bold text-lg mt-2">Mobile Development</h5>
             </div>
@@ -76,7 +76,7 @@
 
             <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="devops-icon.png" alt="DevOps Icon" class="h-20">
+                    <img src="../assets/devops-cat.png" alt="DevOps Icon" class="h-full">
                 </div>
                 <h5 class="font-bold text-lg mt-2">DevOps</h5>
             </div>
@@ -84,7 +84,7 @@
 
             <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="web-design-icon.png" alt="Web Design Icon" class="h-20">
+                    <img src="../assets/web-dev-design.webp" alt="Web Design Icon" class="h-full">
                 </div>
                 <h5 class="font-bold text-lg mt-2">Web Design</h5>
             </div>
@@ -92,7 +92,7 @@
 
             <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="game-development-icon.png" alt="Game Development Icon" class="h-20">
+                    <img src="../assets/game-dev-cat.png" alt="Game Development Icon" class="h-full">
                 </div>
                 <h5 class="font-bold text-lg mt-2">Game Development</h5>
             </div>
@@ -100,7 +100,7 @@
 
             <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="software-testing-icon.png" alt="Software Testing Icon" class="h-20">
+                    <img src="../assets/software-test.png" alt="Software Testing Icon" class="h-full">
                 </div>
                 <h5 class="font-bold text-lg mt-2">Software Testing</h5>
             </div>
@@ -108,7 +108,7 @@
 
             <div class="relative flex flex-col items-center">
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg h-64 w-64 flex items-center justify-center">
-                    <img src="other-icon.png" alt="Other Icon" class="h-20">
+                    <img src="../assets/other.png" alt="Other Icon" class="h-full">
                 </div>
                 <h3 class="font-bold text-lg mt-2">Other Categories</h3>
             </div>
